# gestor-estoque

./: pyproject.toml  requesitos.txt
gestor_estoque/: settings.py  urls.py
produtos/: forms.py  models.py  urls.py  views.py
produtos/migrations/: 0001_initial.py  0002_rename_name_local_nome.py  0003_rename_unidade_embalagem_sigla.py
produtos/templates/produtos/: adicionar_categoria.html  adicionar_embalagem.html  adicionar_fornecedor.html  adicionar_produto.html  editar_categorias.html  editar_embalagem.html  editar_fornecedor.html  editar_locais.html  editar_produtos.html  listar_categorias.html  listar_embalagem.html  listar_fornecedores.html  listar_locais.html  listar_produtos.html
templates/: base.html  index.html  menu.html
